===============================================================================
Preliminary notes:
------------------
Mark "o": new feature
Mark "*": bug fixed.
Mark "!": change that can break compatibility with older version
===============================================================================

version 5.0.6 ????/??/??
========================


version 5.0.5 2015/03/06
========================
o new method "addContent" for NehanPagedElement to push addional text to paged-element.
o add "nehan-clone" class to the blocks generated by cloned style.
o add "data-root-block-id" attribute to output dom for the blocks of direct children of body.
o add Config.disableInlineStyle to disable inline style or not.
o Nehan.createEngine is added, now Nehan.setup is alias name of this function(remained for backward compatibility).
* fix too wide extent of ruby line.
* treat "true" or "false" value in dataset as 'boolean'.
* disable margin-after, margin-before of inline element.
* fix justify bug in some rare case.
! rename LayoutContext(layout-context.js) to CursorContext(cursor-context.js).
! rename Layout(layout.js) to Display(display.js).
! rename 'layout' in optinal argument for Nehan.setup to 'display'.

version 5.0.4 2014/12/8
========================
o support display:none
o set unique id as "data-block-id" for every block elements.
o set unique id(nehan-header-xxx) and common class(nehan-header) for every header eleemnts.
o add unique engine id to each header_id to handle the case multi-engines are running in single page.
! extract Client and Env as global module.
! change task runner from grunt -> gulp.
* fix line-break bug(double line-break).
* switch from float-generator to original parent generator if rest space is exhausted.

version 5.0.3 2014/08/05
=========================
o new interface 'Nehan.createPagedElement' is created. more abstract layer and easy to use.
o add plugin for gravator(nehan.gravator.js)
o add plugin(utility tag <pasted>)